# StProject

./: .gitignore  .qr_store.json  README.md  app.py  playwright_runner.py  pyproject.toml  settings.py
.cursor/: rules
.github/: rules
.streamlit/: README.md  config.toml  streamlit_README.md
config/: pages.py  settings.py
core/: README.md  auth.py  db.py  device_auth.py  expense_db.py  network.py  ocr_engine.py  outpaint_engine.py  qr_login.py  qr_store.py  session_store.py  totp.py  users.py
pages/: README.md  crawler_dashboard.py  daily_expense.py  dashboard.py  home.py  image_outpainter.py  image_upscaler.py  ocr_scanner.py  pages_README.md  settings.py
