[project]
name = "stproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "basicsr>=1.4.2",
    "bcrypt>=5.0.0",
    "crawlee[beautifulsoup]>=1.6.2",
    "diffusers>=0.32.0",
    "easyocr>=1.7.2",
    "httpx[http2]>=0.28.1",
    "huggingface-hub>=1.15.0",
    "numpy>=2.4.4",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "pydantic>=2.13.2",
    "pymupdf>=1.27.2.3",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.2",
    "qrcode[pil]>=8.2",
    "requests>=2.33.1",
    "safetensors>=0.7.0",
    "selectolax>=0.4.7",
    "sentencepiece>=0.2.1",
    "streamlit>=1.56.0",
    "supabase>=2.29.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=5.8.1",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]
